Fixed color and alignment in header, footer

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ Version:        1.0
 body {
 	padding: 0 0;
 	background: #4d091e;
+	font-family: 'Open Sans', sans-serif;
 }
 
 #page {
@@ -40,15 +41,15 @@ body {
 
 .donatebutton {
 	margin: 10px 15px;
-	padding: 5px;
+        padding: 2px 10px 2px 10px;
 	background: #ffcb3f;
-	border: 3px solid white;
+	border: 2px solid white;
 	font-weight: bold;
 }
 
 .espanol {
 	margin: 10px 15px;
-	padding: 8px;
+	padding: 4px 10px 4px 10px;
 	background: #6b949f;
 	color: white;
 	font-weight: bold;
@@ -59,7 +60,17 @@ body {
 
 #access {
 	margin: 0 auto;
-	background: #842f26;
+	background: #9a2c21;
+}
+
+#access a{
+	line-height:.8em;
+	vertical-align:middle;
+	padding: 30px 1.2125em;
+}
+
+#access li {
+	font-size: 18px;
 }
 
 #main {
@@ -67,12 +78,32 @@ body {
 	margin: auto;
 }
 
+/* This is the main area on the right */
 #primary {
 	background: #CCC;
+	float: right !important;
+	width: 680px !important;
+	margin-right: 20px !important;
+        border: 2px solid #ffcb3f;
 }
 
+/* This is the menu on the left */
+#secondary {
+	float: left !important;
+	width: 200px !important;
+}
+/* This is the footer widget area */
 #supplementary {
 	border-top: none;
+	padding: 1em 0px;
+}
+
+/* Footer */
+
+#supplementary.two .widget-area {
+	float: left;
+	margin-right: 3.7%;
+	width: auto;
 }
 
 #mercado {
@@ -128,4 +159,106 @@ body {
 	border-top: 1px solid #667;
 	border-bottom: 15px solid #99401e;
 	padding: 1em 1em;
+}
+
+.menu { 
+	text-transform: uppercase;
+	height:50px;
+}
+
+#espbanner{
+	height:100px;
+}
+
+.current_page_item{
+	font-size:18px;
+
+}
+
+.page_item{
+        font-size:18px;
+	max-width:180px;
+	text-align:center;
+	vertical-align:center;
+	display:block;
+}
+
+.arrow_right {
+        width: 0;
+        height: 0;
+        border-top: 7px solid transparent;
+        border-bottom: 7px solid transparent;
+        border-left: 7px solid white;
+	display:inline-block;
+	vertical-align:middle;
+        padding-right:5px;
+        margin-bottom:2px;
+}
+
+.arrow_left {
+        width: 0;
+        height: 0;
+        border-top: 7px solid transparent;
+        border-bottom: 7px solid transparent; 
+        border-right:7px solid white;
+	display:inline-block;
+        vertical-align:middle;
+	padding-left:5px;
+	margin-bottom:2px;
+}
+
+#logo{
+	background-color:#fff;
+	width:440px;
+	height:100px;
+	float:left;
+	background: url(./images/es_logo.png);
+	background-position: 0px -5px;
+}
+
+.menu{
+	margin-left:5% !important;
+	margin-right:5% !important;
+}
+
+.widget{
+	background-color:#292929;
+	margin-left:20px;
+	width:240px;
+	color: #fff;
+	padding: 0 20px 20px;
+}
+
+#main{
+        background: url(./images/pattern.jpg);
+	min-height:500px;
+	padding-top:30px;
+	padding-bottom: 30px;
+	overflow: auto;
+}
+
+.widget-title{
+        color: #fff;
+	font-size:14px;
+	
+}
+
+.widget li{
+	list-style-type:none;
+}
+
+.widget_nav_menu {
+	width: 100px;
+	float: left;
+	clear: none !important;
+	border-right: 1px solid #667;
+}
+
+.widget_nav_menu a {
+	color: white;
+}
+	
+#logospan{
+	width:350px;
+	height:100px;
 }
